internal/gatewayapi/testdata/tlsroute-dynamic-resolver-with-multiple-backends.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: TLS
          port: 443
          tls:
            mode: Passthrough
          allowedRoutes:
            namespaces:
              from: All
tlsRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tlsroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      hostnames:
        - "foo.com"
      rules:
        - backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-dynamic-resolver
            - name: service-1
              port: 8080
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-dynamic-resolver
      namespace: default
    spec:
      type: DynamicResolver
